hero almost complete with cursor

--- a/index.html
+++ b/index.html
@@ -6,13 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clone ~ Cynthia Ugwu | Product Designer Clone</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.min.css" rel="stylesheet">
     <link
         href="https://api.fontshare.com/v2/css?f[]=general-sans@200,201,300,301,400,401,500,501,600,601,700,701,1,2&display=swap"
         rel="stylesheet">
 </head>
 
 <body>
-    <section id="hero-section">
+
+    <div class="startingOverlay" id="init-overlay">
+        <div class="text-container">
+            <span>
+                Cynthia Ugwu
+            </span>
+            <div class="page-loader">
+                &nbsp;
+            </div>
+        </div>
+    </div>
+    <div class="circle" id="cursor">
+        &nbsp;
+    </div>
+    <section id="hero-section" class="section--hero">
         <nav class="nav page-x">
             <div class="nav-left popin-container">
                 <a href="#" class="logo popin">Cynthia Ugwu</a>
@@ -52,6 +67,33 @@
                     <span class="popin-top slow">work from Sep ‘24
                     </span>
                 </span>
+            </div>
+            <div class="base-text hero-bottom">
+                <div class="hero-bottom__left hero-bottom__item">
+                    <div class="text">
+                        Previously worked at
+                        Code and Theory
+                    </div>
+                    <span>
+                        <i class="ri-arrow-right-line arrow"></i>
+                    </span>
+                </div>
+                <div class="hero-bottom__center hero-bottom__item">
+                    <div class="text">
+                        Protopie ambassador
+                    </div>
+                    <span>
+                        <i class="ri-arrow-right-line arrow"></i>
+                    </span>
+                </div>
+                <div class="hero-bottom__right hero-bottom__item">
+                    <div class="grey-circle-icon">
+                        <i class="ri-arrow-down-line"></i>
+                    </div>
+                    <div class="grey-circle-icon">
+                        <i class="ri-arrow-down-line"></i>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
