--- a/index.html
+++ b/index.html
@@ -13,90 +13,249 @@
 </head>
 
 <body>
-    <div class="startingOverlay" id="init-overlay">
-        <div class="text-container">
-            <span>
-                Cynthia Ugwu
-            </span>
-            <div class="page-loader">
+    <main id="main">
+        <div class="startingOverlay" id="init-overlay">
+            <div class="text-container">
+                <span>
+                    Cynthia Ugwu
+                </span>
+                <div class="page-loader">
+                    &nbsp;
+                </div>
+            </div>
+        </div>
+        <div class="circle" id="cursor">
+            &nbsp;
+        </div>
+        <section id="hero-section" class="section--hero">
+            <nav class="nav page-x">
+                <div class="nav-left popin-container">
+                    <a href="#" class="logo popin">Cynthia Ugwu</a>
+                </div>
+                <div class="nav-right">
+                    <button class="menu-icon popin-container">
+                        <span class="popin">
+                            Menu+
+                        </span>
+                    </button>
+                </div>
+            </nav>
+            <div class="hero page-x">
+                <h1 class="page_title">
+                    <span class="popin-container heading-large product">
+                        <span class="popin">
+                            Product
+                        </span>
+                    </span>
+                    <span class="popin-container heading-large designer">
+                        <span class="popin">
+                            Designer
+                        </span>
+                    </span>
+                    <span class="popin-container base-text toronto">
+                        <span class="popin-top">
+                            Based in Toronto
+                        </span>
+                    </span>
+                </h1>
+                <div class="subtext">
+                    <span class="base-text popin-container">
+                        <span class="popin-top slow"> for Full Time & Freelance
+                        </span>
+                    </span>
+                    <span class="base-text popin-container">
+                        <span class="popin-top slow">work from Sep ‘24
+                        </span>
+                    </span>
+                </div>
+                <div class="base-text hero-bottom">
+                    <div class="hero-bottom__left hero-bottom__item">
+                        <div class="text">
+                            Previously worked at
+                            Code and Theory
+                        </div>
+                        <span>
+                            <i class="ri-arrow-right-line arrow"></i>
+                        </span>
+                    </div>
+                    <div class="hero-bottom__center hero-bottom__item">
+                        <div class="text">
+                            Protopie ambassador
+                        </div>
+                        <span>
+                            <i class="ri-arrow-right-line arrow"></i>
+                        </span>
+                    </div>
+                    <div class="hero-bottom__right hero-bottom__item">
+                        <div class="grey-circle-icon">
+                            <i class="ri-arrow-down-line"></i>
+                        </div>
+                        <div class="grey-circle-icon">
+                            <i class="ri-arrow-down-line"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="portfolio" class="section--portfolio page-x">
+            <div class="divider">
                 &nbsp;
             </div>
-        </div>
-    </div>
-    <div class="circle" id="cursor">
-        &nbsp;
-    </div>
-    <section id="hero-section" class="section--hero">
-        <nav class="nav page-x">
-            <div class="nav-left popin-container">
-                <a href="#" class="logo popin">Cynthia Ugwu</a>
-            </div>
-            <div class="nav-right">
-                <button class="menu-icon popin-container">
-                    <span class="popin">
-                        Menu+
-                    </span>
-                </button>
-            </div>
-        </nav>
-        <div class="hero page-x">
-            <h1 class="page_title">
-                <span class="popin-container heading-large product">
-                    <span class="popin">
-                        Product
-                    </span>
-                </span>
-                <span class="popin-container heading-large designer">
-                    <span class="popin">
-                        Designer
-                    </span>
-                </span>
-                <span class="popin-container base-text toronto">
-                    <span class="popin-top">
-                        Based in Toronto
-                    </span>
-                </span>
-            </h1>
-            <div class="subtext">
-                <span class="base-text popin-container">
-                    <span class="popin-top slow"> for Full Time & Freelance
-                    </span>
-                </span>
-                <span class="base-text popin-container">
-                    <span class="popin-top slow">work from Sep ‘24
-                    </span>
-                </span>
-            </div>
-            <div class="base-text hero-bottom">
-                <div class="hero-bottom__left hero-bottom__item">
-                    <div class="text">
-                        Previously worked at
-                        Code and Theory
-                    </div>
-                    <span>
-                        <i class="ri-arrow-right-line arrow"></i>
-                    </span>
+            <div class="project_container" id="lucid-motors">
+                <div class="hover_img_container">
+                    <img width="100%" height="100%" src="./assets/hover_images/lucid-motors.webp" alt="baron-capital">
                 </div>
-                <div class="hero-bottom__center hero-bottom__item">
-                    <div class="text">
-                        Protopie ambassador
-                    </div>
-                    <span>
-                        <i class="ri-arrow-right-line arrow"></i>
-                    </span>
-                </div>
-                <div class="hero-bottom__right hero-bottom__item">
-                    <div class="grey-circle-icon">
-                        <i class="ri-arrow-down-line"></i>
-                    </div>
-                    <div class="grey-circle-icon">
-                        <i class="ri-arrow-down-line"></i>
-                    </div>
+                <h1 class="heading-large">
+                    Lucid Motors
+                </h1>
+                <div class="base-text">
+                    2023
                 </div>
             </div>
-        </div>
-    </section>
-    <script src="dist/index.js"></script>
+            <div class="divider">
+                &nbsp;
+            </div>
+            <div class="project_container" id="baron-capital">
+                <div class="hover_img_container">
+                    <img width="100%" height="100%" src="./assets/hover_images/baron-capital.webp" alt="baron-capital">
+                </div>
+
+                <h1 class="heading-large">
+                    Baron Capital
+                </h1>
+                <div class="base-text">
+                    2023
+                </div>
+            </div>
+            <div class="divider">
+                &nbsp;
+            </div>
+            <div class="project_container" id="nfl">
+                <div class="hover_img_container">
+                    <img width="100%" height="100%" src="./assets/hover_images/nfl.webp" alt="baron-capital">
+                </div>
+                <h1 class="heading-large">
+                    NFL
+                </h1>
+                <div class="base-text">
+                    2023
+                </div>
+            </div>
+            <div class="divider">
+                &nbsp;
+            </div>
+            <div class="project_container" id="placenew">
+                <div class="hover_img_container">
+                    <img width="100%" height="100%" src="./assets/hover_images/placenew.webp" alt="baron-capital">
+                </div>
+                <h1 class="heading-large">
+                    Placenew
+                </h1>
+                <div class="base-text">
+                    2024
+                </div>
+            </div>
+            <div class="divider">
+                &nbsp;
+            </div>
+            <div class="project_container" id="somos">
+                <div class="hover_img_container">
+                    <img width="100%" height="100%" src="./assets/hover_images/somos.webp" alt="baron-capital">
+                </div>
+                <h1 class="heading-large">
+                    Somos
+                </h1>
+                <div class="base-text">
+                    2023
+                </div>
+            </div>
+            <div class="divider">
+                &nbsp;
+            </div>
+            <button class="btn__outlined">
+                View all work
+            </button>
+        </section>
+        <section id="client_list" class="section--client_list">
+            <div class="carousal">
+                <div class="logo_container">
+                    <img src="assets/client_logos/AVIS.svg" class="client_logo" alt="AVIS">
+                </div>
+                <div class="logo_container">
+                    <img src="assets/client_logos/Clover.svg" class="client_logo" alt="Clover">
+                </div>
+                <div class="logo_container">
+                    <img src="assets/client_logos/Comcast.svg" class="client_logo" alt="Comcast">
+                </div>
+                <div class="logo_container">
+                    <img src="assets/client_logos/Expedia.svg" class="client_logo" alt="Expedia">
+                </div>
+                <div class="logo_container">
+                    <img src="assets/client_logos/Lucid.svg" class="client_logo" alt="Lucid">
+                </div>
+                <div class="logo_container">
+                    <img src="assets/client_logos/Microsoft.svg" class="client_logo" alt="Microsoft" width="100%"
+                        height="100%">
+                </div>
+                <div class="logo_container">
+                    <img src="assets/client_logos/NEOM.svg" class="client_logo" alt="NEOM">
+                </div>
+                <div class="logo_container">
+                    <img src="assets/client_logos/NFL.svg" class="client_logo" alt="NFL">
+                </div>
+                <div class="logo_container">
+                    <img src="assets/client_logos/Toefl.svg" class="client_logo" alt="Toefl">
+                </div>
+                <div class="logo_container">
+                    <img src="assets/client_logos/Under_armour.svg" class="client_logo" alt="Under Armour" width="100%"
+                        height="100%">
+                </div>
+                <div class="logo_container">
+                    <img src="assets/client_logos/Zappos.svg" class="client_logo" alt="Zappos">
+                </div>
+            </div>
+            <div class="carousal">
+                <div class="logo_container">
+                    <img src="assets/client_logos/AVIS.svg" class="client_logo" alt="AVIS">
+                </div>
+                <div class="logo_container">
+                    <img src="assets/client_logos/Clover.svg" class="client_logo" alt="Clover">
+                </div>
+                <div class="logo_container">
+                    <img src="assets/client_logos/Comcast.svg" class="client_logo" alt="Comcast">
+                </div>
+                <div class="logo_container">
+                    <img src="assets/client_logos/Expedia.svg" class="client_logo" alt="Expedia">
+                </div>
+                <div class="logo_container">
+                    <img src="assets/client_logos/Lucid.svg" class="client_logo" alt="Lucid">
+                </div>
+                <div class="logo_container">
+                    <img src="assets/client_logos/Microsoft.svg" class="client_logo" alt="Microsoft" width="100%"
+                        height="100%">
+                </div>
+                <div class="logo_container">
+                    <img src="assets/client_logos/NEOM.svg" class="client_logo" alt="NEOM">
+                </div>
+                <div class="logo_container">
+                    <img src="assets/client_logos/NFL.svg" class="client_logo" alt="NFL">
+                </div>
+                <div class="logo_container">
+                    <img src="assets/client_logos/Toefl.svg" class="client_logo" alt="Toefl">
+                </div>
+                <div class="logo_container">
+                    <img src="assets/client_logos/Under_armour.svg" class="client_logo" alt="Under Armour" width="100%"
+                        height="100%">
+                </div>
+                <div class="logo_container">
+                    <img src="assets/client_logos/Zappos.svg" class="client_logo" alt="Zappos">
+                </div>
+            </div>
+        </section>
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.min.js"></script>
+    <script type="module" src="./index.ts"></script>
 </body>
 
 </html>
