--- a/index.html
+++ b/index.html
@@ -86,14 +86,14 @@
                             <i class="ri-arrow-right-line arrow"></i>
                         </span>
                     </div>
-                    <div class="hero-bottom__right hero-bottom__item">
+                    <!-- <div class="hero-bottom__right hero-bottom__item">
                         <div class="grey-circle-icon">
                             <i class="ri-arrow-down-line"></i>
                         </div>
                         <div class="grey-circle-icon">
                             <i class="ri-arrow-down-line"></i>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
@@ -172,9 +172,9 @@
             <div class="divider">
                 &nbsp;
             </div>
-            <button class="btn__outlined">
+            <!-- <button class="btn__outlined">
                 View all work
-            </button>
+            </button> -->
         </section>
         <section id="client_list" class="section--client_list">
             <div class="carousal">
