--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
     </main>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.min.js"></script>
-    <script type="module" src="./index.ts"></script>
+    <script type="module" src="./dist/index.js"></script>
 </body>
 
 </html>
